@@ -6,6 +6,11 @@ list(APPEND PAL_SOURCES
     text/KillRingNone.cpp
 )
 
+list(APPEND PAL_INCLUDE_DIRECTORIES
+    "${CMAKE_BINARY_DIR}"
+    "${CMAKE_BINARY_DIR}/../include/private"
+)
+
 set(PAL_OUTPUT_NAME PAL${DEBUG_SUFFIX})
 
 file(MAKE_DIRECTORY ${FORWARDING_HEADERS_DIR}/WebCore/pal)
