@@ -1,3 +1,15 @@
+2017-07-13  Per Arne Vollan  <pvollan@apple.com>
+
+        [Win] Build error when building WebCore from WebCore.proj project file.
+        https://bugs.webkit.org/show_bug.cgi?id=174462
+
+        Reviewed by Brent Fulgham.
+
+        Add required include directory to list of include directories.
+ 
+        * pal/CMakeLists.txt:
+        * pal/PlatformWin.cmake:
+
 2017-07-12  Matt Lewis  <jlewis3@apple.com>
 
         Unreviewed, rolling out r219401.
